# Gemini330

./: .gitignore  CMakeLists.txt  README.md  camera_capture.cpp  camera_capture.hpp  check_usb_mode.sh  config_temp.hpp  debug.md  main.cpp  oss_uploader.cpp  oss_uploader.hpp  set_usb_mode.sh  stream_processor.cpp  stream_processor.hpp  thread_safe_queue.hpp  video_encoder.cpp  video_encoder.hpp
